src/css/main.css
/* ... */
body.controls-visible #toolbar {
  opacity: 1;
}

#toolbar {
  -webkit-transform: translateY(100%);
  bottom: 52px;  /* Keep in sync with #toolbar.expanded. */
  left: 0;
  position: absolute;
  right: 0;
  transition: -webkit-transform 200ms ease,
              opacity 200ms linear;
}

body:not(.has-error) #toolbar.expanded {
  -webkit-transform: translateY(52px);
}

#picture-preview {
  bottom: 25%;
  left: 25%;
  pointer-events: none;
  position: absolute;
  right: 25%;
  top: 25%;
  z-index: 1;
}

#picture-preview img {
  pointer-events: auto;
}

#picture-preview img {
  -webkit-animation: animatePicture 1s 1s;
  -webkit-animation-fill-mode: forwards;
  border: 6px solid white;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
  position: absolute;
  transition: opacity 1s, -webkit-transform 1s;
  /* The animation properties are added from views/camera.js */
  width: 100%;
}

#picture-preview img.activated {
  -webkit-transform: scale(1.2) !important;  /* Override the inline style. */
  transition: opacity 1s, -webkit-transform 250ms;
  z-index: 1;
}

#camera,
#album,
#browser {
  bottom: 0;
  left: 0;
  outline: none;
  opacity: 0;
  overflow: auto;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity 200ms, visibility 0 200ms;
  visibility: hidden;
  z-index: 1;  /* Hack to enable touch scrolling in album. */
}

#camera {
  -webkit-box-align: center;
  display: -webkit-box;
  overflow: hidden;
}

#toast {
  -webkit-box-align: center;
  -webkit-box-pack: center;
  bottom: 0;
  display: -webkit-box;
  left: 0;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity 250ms;
  z-index: 1;
}

#toast #toast-message {
  background: #1e1e23;
  border-radius: 16px;
  color: white;
  font-size: 16px;
  line-height: 32px;
  opacity: 0.9;
  padding: 0 16px;
}

#toast.visible {
  opacity: 1;
}

#performance-test {
  -webkit-box-align: center;
  -webkit-box-orient: vertical;
  -webkit-box-pack: center;
  bottom: 0;
  display: -webkit-box;
  left: 0;
  pointer-events: none;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity 250ms;
  z-index: 1;
}

#performance-test .perf-test-msg {
  background: rgba(30, 30, 35, 0.75);
  border-radius: 32px;
  color: white;
  font-size: 24px;
  padding: 16px 32px;
}

#performance-test #perf-test-bar-wrapper {
  background: rgba(30, 30, 35, 0.5);
  border-radius: 32px;
  margin: 8px;
  width: 50%;
}

#performance-test #perf-test-bar {
  background: rgba(96, 255, 96, 0.8);
  border-radius: 32px;
  color: white;
  font-size: 16px;
  min-width: 32px;
  padding: 8px 0;
  text-align: center;
  width: 0;
}

#performance-test #perf-test-bubble-wrapper {
  -webkit-box-align: center;
  -webkit-box-orient: vertical;
  -webkit-box-pack: center;
  display: -webkit-box;
  width: 96px;
  height: 96px;
  margin-top: 60px;
}

#performance-test #perf-test-bubble {
  border-radius: 100px;
  color: white;
  font-size: 16px;
  line-height: 24px;
  padding: 32px;
  text-align: center;
  width: 24px;
}

body.performance-test #performance-test {
  opacity: 1;
}

body.performance-test * {
  pointer-events: none !important;
}

#album .buttons,
#browser .buttons {
  position: fixed;
}

#album .buttons button[disabled],
#browser .buttons button[disabled] {
  display: none;
}

#album {
  background: black;
}

#album .padder {
  padding: 15px;
}

#album img {
  -webkit-app-region: no-drag;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
  margin: 8px;
  transition: -webkit-transform 50ms;
  vertical-align: middle;
  width: 220px;
}

#album img.selected {
  outline: 4px solid rgb(66, 129, 244);
  outline-offset: -4px;
}

#browser {
  background: rgba(0, 0, 0, 0.8);
  outline: none;
  visibility: hidden;
}

body.camera #camera,
body.browser #browser,
body.album #album {
  opacity: 1;
  transition: opacity 200ms;
  visibility: visible;
}

#browser .padder {
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  display: -webkit-box;
  height: 100%;
}

#browser img {
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
  display: -webkit-box;
  height: 72%;
  margin: 4%;
  pointer-events: auto;
  transition: -webkit-transform 200ms;
}

#browser div.bounds-padder {
  display: -webkit-box;
  height: 1px;  /* Required to make the element visible. */
  width: 50%;
}

#browser img.selected {
  -webkit-transform: scale(1.1);
}

/* Printing in the browser view. */
@media print {
  /* For the album view, do not restrict to one page. */
  html {
    height: 100%;  /* Required for printing. */
  }

  body {
    height: auto;
    overflow: visible;
    position: static;
    width: 100%;
  }

  body.album:not(.browser) #album {
    bottom: auto;
  }

  /* Reset background colors. */
  body,
  #album,
  #browser {
    background: transparent;
  }

  /* Hide the buttons and scroll bars. */
  .buttons,
  .scrollbar-track {
    display: none;
  }

  /* Hide all root elements, except the printed view. */
  body.browser > :not(#browser),
  body.album:not(.browser) > :not(#album) {
    display: none;
  }

  /* Hide everything from the browse view, but the current one. */
  #browser .padder > :not(.selected) {
    display: none;
  }

  /* Reset styles to default on the borwser view, and set the maximum dimensions
     to 100%. */
  #browser img.selected {
    -webkit-transform: scale(1);
    border: none;
    box-shadow: none;
    height: auto;
    margin: auto;
    max-height: 100%;
    max-width: 100%;
    position: absolute;
    width: auto;
  }

  /* Reset styles to default on the album view. */
  #album img,
  #album img.selected {
    -webkit-transform: scale(1);
    border: none;
    box-shadow: none;
    height: auto;
    max-width: 30%;
  }
}

#tooltip {
  -webkit-transform: translateY(10px);
  left: 0;
  opacity: 0;
  padding: 5px;
  pointer-events: none;
  position: absolute;
  top: 0;
  white-space: nowrap;
  z-index: 100;
}
/* ... */

